--- a/k8s-deploy.yaml
+++ b/k8s-deploy.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frozenyogurtshop-username
+  name: frozenyogurtshop-hadiya
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: frozenyogurtshop-username
+      app: frozenyogurtshop-hadiya
   template:
     metadata:
-      name: frozenyogurtshop-username
+      name: frozenyogurtshop-hadiya
       labels:
-        app: frozenyogurtshop-username
+        app: frozenyogurtshop-hadiya
     spec:
       containers:
       - name: ovs
@@ -23,11 +23,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: frozenyogurtshop-username
+  name: frozenyogurtshop-hadiya
 spec:
   type: NodePort
   ports:
   - targetPort: 80 
     port: 80
   selector:
-    app: frozenyogurtshop-username
+    app: frozenyogurtshop-hadiya
